--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,202 @@
+::-webkit-scrollbar{
+    width: 14px;
+    
+}
+::-webkit-scrollbar-button{
+    display: none;
+}
+::-webkit-scrollbar-track{
+    border-left: 3px solid #CD6326;
+    background-color: #CD6326;
+}
+::-webkit-scrollbar-track-piece{
+    visibility: hidden;
+}
+::-webkit-scrollbar-thumb{
+    border-left: 3px solid #CD6326;
+    background-color: rgba(255, 255, 255, 0.795);
+}
+::-webkit-scrollbar-corner{
+    display: none;
+} 
+::-webkit-resizer{
+    visibility: hidden;
+}
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Open Sans;
     box-sizing:border-box;
     list-style-type: none;
     text-decoration: none;
 }
+header,section,footer{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
 body{
+    overflow-x: hidden;;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-wrap:wrap;
-    background-color: #000;
+}
+h1{
+    font-size: 48px;
+    color: #CD6326;
 }
 header{
     min-height: 100vh;
+    background: url(/images/hero.png) top center / cover;
 }
 .container{
     width:1200px;
-    border:1px solid red;
-    height:auto;
 }
 .logo{
+    display: flex;
     padding-top: 20px;
+    font-size:32px;
+    color:#f7f7f7;
+    cursor: pointer;
+}
+.logo__name{
+    transition: 0.5s all ease;
+    line-height:60px;
+    padding-left: 15px;
+}
+.logo__name:hover{
+    color:#888;
+}
+.menu{
+    display: flex;
+    justify-content: space-between;
+}
+.navigation{
+    align-items: center;
+    font-weight: normal;
+    line-height: 60px;
+    padding-top: 20px;
+    display: flex;
+    font-size: 23px;
+    color: #f7f7f7;
+    width: 40%;
+    justify-content: space-between;
+}
+.signIn{
+    outline: none;
+    transition: 0.5s all ease;
+    cursor: pointer;
+    font-weight: normal;
+    color: inherit;
+    font-size: 23px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid #CD6326;
+    border-radius: 5px;
+    padding: 0 23px;
+    height: 50px;
+}
+.navigation__links{
+    transition: 0.5s all ease;
+}
+.navigation__links:visited, .navigation__links:focus{
+    color:white;
+    outline: none;
+}
+.navigation__links:hover, .signIn:hover, .fa-search:hover{
+    color: #888;
+}
+.fa-search{
+    cursor: pointer;
+    transition: 0.5s all ease;
+}
+.text-regular-light{
+    font-size: 18px;
+    color: #f7f7f7;
+}
+.donate{
+    transition: 0.5s color ease;
+    display: block;
+    font-size: 23px;
+    height: 60px;
+    padding: 0 42px;
+    border-radius: 5px;
+    outline: none;
+    border: 0px solid black;
+    margin-top: 49px;
+    line-height: 27px;
+    background-color: #CD6326;
+    cursor: pointer;
+    font-weight: 400;
+    color: #f7f7f7;
+    
+}
+.donate:hover{
+    color: #888;
+}
+.motto{
+    margin-top: 15vh;
+    margin-bottom: 50px;
+}
+.description{
+    margin-top: 51px;
+}
+.articles{
+    min-width: 100vw;
+    background-color: #ccc;
+    min-height: 100vh;
+}
+.mobile-navigation{
+    
+    color: #fff;
+}
+/*Laptops*/
+
+@media screen and (min-width: 980px) and (max-width: 1250px){
+    .logo{
+        padding-left: 20px;
+        
+    }
+    .navigation{
+        padding-right: 20px;
+        
+    }
+    .motto{
+        padding-left: 50px;
+    }
+}
+/*Large phones and tablets*/
+@media screen and (max-width: 979px){
+    .logo{
+        padding-left: 20px;
+        
+    }
+    .navigation{
+        padding-right: 20px;
+        
+    }
+    .motto{
+        padding-left: 50px;
+    }
+    .navigation{
+        display: none;
+    }
+    .mobile-navigation{
+        display: block;
+    }
+}
+/*Phones*/
+@media screen and (max-width: 767px){
+    .motto{
+        margin-top: 30vh;
+    }
+    .mobile-navigation{
+        display: block;
+    }
+}
+/*Small phones*/
+@media (max-width: 479px){
+    .mobile-navigation{
+        display: block;
+    }
 }
