--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 ::-webkit-scrollbar-track{
     border-left: 3px solid #CD6326;
-    background-color: #CD6326;
+    background-color: #000;
 }
 ::-webkit-scrollbar-track-piece{
     visibility: hidden;
@@ -147,8 +147,97 @@ header{
     min-height: 100vh;
 }
 .mobile-navigation{
-    
+    display: none;
     color: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+.mobile-navigation  *{
+    display: none;
+}
+.burger{
+    cursor: pointer;
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: 2px solid #CD6326;
+    margin-right: 35px;
+    margin-top: 20px;
+}
+.bars{
+    z-index: -1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 30px;
+    height: 3px;
+    background-color: #CD6326;
+    display: block;
+}
+.bars:before{
+    position: absolute;
+    content: ' ';
+    top: -10px;
+    width: 30px;
+    height: 3px;
+    background-color: #CD6326;
+    display: block;
+}
+.bars:after{
+    position: absolute;
+    content: ' ';
+    bottom: -10px;
+    width: 30px;
+    height: 3px;
+    background-color: #CD6326;
+    display: block;
+}
+.open-checkbox{
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+.link{
+    display: block;
+}
+.burger > .mobile-menu{
+    display: flex;
+    flex-wrap: wrap;
+    align-items:center;
+    transition: 1s top ease;
+    position: fixed;
+    top:-100vh;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #1c5f1f;
+    z-index: -2;
+}
+.mobile-menu > .navigation__links{
+    font-size: 25px;
+    width: 100%;
+    line-height: 2rem;
+    display: flex;
+    justify-content: center;
+    z-index: 100;
+    color: #c44f0c;
+}
+.mobile-menu{
+    position: fixed;
+    display: none;
+    width: 100vw;
+    height: 10px;
+    top: 0;
+    left: 0;
+}
+.open-checkbox:checked ~ .mobile-menu{
+    top: 0;
 }
 /*Laptops*/
 
@@ -169,7 +258,6 @@ header{
 @media screen and (max-width: 979px){
     .logo{
         padding-left: 20px;
-        
     }
     .navigation{
         padding-right: 20px;
