--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,20 @@ h1{
     font-size: 48px;
     color: #CD6326;
 }
+h2{
+    line-height: 36px;
+    margin-top: 120px;
+    font-weight: normal;
+    font-size: 48px;
+    color: #333333;
+    line-height: 72px;
+}
+sh-2{
+    font-family: Open Sans;
+    font-weight: normal;
+    font-size: 24px;
+    color: #666;
+}
 header{
     min-height: 100vh;
     background: url(/images/hero.png) top center / cover;
@@ -58,12 +72,12 @@ header{
     padding-top: 20px;
     font-size:32px;
     color:#f7f7f7;
-    cursor: pointer;
 }
 .logo__name{
     transition: 0.5s all ease;
     line-height:60px;
     padding-left: 15px;
+    cursor: pointer;
 }
 .logo__name:hover{
     color:#888;
@@ -239,6 +253,38 @@ header{
 .open-checkbox:checked ~ .mobile-menu{
     top: 0;
 }
+.articles__subheader{
+    margin-top: 20px;
+}
+.slider__window{
+    display: block;
+    width: 100%;
+    border: 1px solid red;
+    margin-top: 120px;
+}
+.slider{
+    display: flex;
+    width: 100%;
+}
+.articles__subheader, .articles__header{
+    display: flex;
+    justify-content: center;
+}
+.element{
+    width: 300px;
+    height: 360px;
+}
+#element1{
+    background: url(/images/element1.jpg) top center / cover;
+}
+#element2{
+    background: url(/images/element2.jpg) top center / cover;
+}
+
+#element3{
+    background: url(/images/element3.jpg) top center / cover;
+}
+
 /*Laptops*/
 
 @media screen and (min-width: 980px) and (max-width: 1250px){
