--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,12 @@
     display: none;
 }
 ::-webkit-scrollbar-track{
-    border-left: 3px solid #CD6326;
     background-color: #000;
 }
 ::-webkit-scrollbar-track-piece{
     visibility: hidden;
 }
 ::-webkit-scrollbar-thumb{
-    border-left: 3px solid #CD6326;
     background-color: rgba(255, 255, 255, 0.795);
 }
 ::-webkit-scrollbar-corner{
@@ -182,7 +180,6 @@ header{
     margin-top: 20px;
 }
 .bars{
-    z-index: -1;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -257,35 +254,57 @@ header{
     margin-top: 20px;
 }
 .slider__window{
+    overflow:hidden;
+    height: 360px;
+    position: relative;
     display: block;
     width: 100%;
-    border: 1px solid red;
     margin-top: 120px;
 }
 .slider{
+    top: 0;
+    left: 0;
+    position: absolute;
     display: flex;
-    width: 100%;
 }
 .articles__subheader, .articles__header{
     display: flex;
     justify-content: center;
 }
 .element{
+    width: 33.33333333vw;
+    display: flex;
+    justify-content: center;
     width: 300px;
     height: 360px;
 }
-#element1{
-    background: url(/images/element1.jpg) top center / cover;
+.element > img{
+    z-index: 0;
 }
-#element2{
-    background: url(/images/element2.jpg) top center / cover;
+.left, .right{
+    cursor: pointer;
+    z-index: 99;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
-
-#element3{
-    background: url(/images/element3.jpg) top center / cover;
+.right{
+    right:10px;
 }
-
+.left{
+    left:10px;
+}
 /*Laptops*/
+@media(min-width: 1025px){
+    .element{
+        width: 33.3vw;
+    }
+}
+@media (max-width: 1024px){
+    .element{
+        width: 50vw;
+    }
+}
 
 @media screen and (min-width: 980px) and (max-width: 1250px){
     .logo{
@@ -326,6 +345,10 @@ header{
     }
     .mobile-navigation{
         display: block;
+    }
+    .element{
+        width: 100vw;
+        justify-content: center;
     }
 }
 /*Small phones*/
