--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ header{
     min-height: 100vh;
 }
 .mobile-navigation{
+    z-index: 100;
     display: none;
     color: #fff;
     position: fixed;
@@ -180,6 +181,7 @@ header{
     margin-top: 20px;
 }
 .bars{
+    pointer-events: none;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -204,7 +206,7 @@ header{
     bottom: -10px;
     width: 30px;
     height: 3px;
-    background-color: #CD6326;
+    background-color: #e68045;
     display: block;
 }
 .open-checkbox{
@@ -227,7 +229,7 @@ header{
     left:0;
     width: 100vw;
     height: 100vh;
-    background-color: #1c5f1f;
+    background-color: #126116;
     z-index: -2;
 }
 .mobile-menu > .navigation__links{
@@ -237,7 +239,7 @@ header{
     display: flex;
     justify-content: center;
     z-index: 100;
-    color: #c44f0c;
+    color: #da580d;
 }
 .mobile-menu{
     position: fixed;
@@ -259,7 +261,6 @@ header{
     position: relative;
     display: block;
     width: 100%;
-    border: 1px solid red;
     margin-top: 120px;
 }
 .slider{
