--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,18 @@ h2{
     color: #333333;
     line-height: 72px;
 }
+h4{
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 36px;
+    color: #f7f7f7;
+}
+small{
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 27px; 
+    color: #f7f7f7;
+}
 sh-2{
     font-family: Open Sans;
     font-weight: normal;
@@ -206,7 +218,7 @@ header{
     bottom: -10px;
     width: 30px;
     height: 3px;
-    background-color: #e68045;
+    background-color: #CD6326;
     display: block;
 }
 .open-checkbox{
@@ -264,17 +276,19 @@ header{
     margin-top: 120px;
 }
 .slider{
+    transition: 1s left ease;
     top: 0;
     left: 0;
     position: absolute;
     display: flex;
+    flex-wrap: nowrap;
 }
 .articles__subheader, .articles__header{
     display: flex;
     justify-content: center;
 }
 .element{
-    width: calculate();
+    position: relative;
     display: flex;
     justify-content: center;
     width: 300px;
@@ -295,6 +309,20 @@ header{
 }
 .left{
     left:10px;
+}
+.element__header{
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 77px;
+    position: absolute;
+    text-align: center;
+}
+.element__subheader{
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 40px;
+    position: absolute;
+    text-align: center;
 }
 /*Laptops*/
 @media(min-width: 1025px){
